--- a/index.html
+++ b/index.html
@@ -1,46 +1,46 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>¡Tu Aplicación! - Promoción</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-
-  <header class="hero">
-    <div class="hero-content">
-      <h1>Tu Aplicación</h1>
-      <p>Descubre lo que nuestra aplicación puede hacer por ti</p>
-      <a href="#descarga" class="cta-btn">Descargar Ahora</a>
-    </div>
-  </header>
-
-  <section class="features">
-    <div class="feature">
-      <h2>Característica 1</h2>
-      <p>Descripción breve de la característica 1.</p>
-    </div>
-    <div class="feature">
-      <h2>Característica 2</h2>
-      <p>Descripción breve de la característica 2.</p>
-    </div>
-    <!-- Agrega más características si es necesario -->
-  </section>
-
-  <section class="testimonials">
-    <h2>Testimonios</h2>
-    <div class="testimonial">
-      <p>"¡Esta aplicación ha cambiado mi vida! Me encanta."</p>
-      <p>- Usuario Feliz</p>
-    </div>
-    <!-- Agrega más testimonios si es necesario -->
-  </section>
-
-  <section id="descarga" class="download">
-    <h2>¡Descarga ahora!</h2>
-    <a href="#" class="cta-btn">Descargar</a>
-  </section>
-
-  <script src="script.js"></script>
-</body>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link rel="stylesheet" href="styles.css" />
+		<title>Responsive Navbar</title>
+	</head>
+	<body>
+		<header id="navbar">
+			<nav class="navbar-container container">
+				<a href="/" class="home-link">
+					<div class="navbar-brand"></div>
+					Website
+				</a>
+				<button
+					type="button"
+					class="navbar-toggle"
+					aria-label="Open navigation menu"
+				>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+					<span class="icon-bar"></span>
+				</button>
+				<div class="navbar-menu">
+					<ul class="navbar-links">
+						<li class="navbar-item">
+							<a href="/about" class="navbar-link">About</a>
+						</li>
+						<li class="navbar-item">
+							<a href="/blog" class="navbar-link">Blog</a>
+						</li>
+						<li class="navbar-item">
+							<a href="/careers" class="navbar-link">Careers</a>
+						</li>
+						<li class="navbar-item">
+							<a href="/contact" class="navbar-link">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</nav>
+		</header>
+		<script src="index.js"></script>
+	</body>
 </html>
