--- a/contacto.html
+++ b/contacto.html
@@ -37,40 +37,32 @@
 		</nav>
 	</header>
 	<br><br><br><br>
-
+	<!-- contenido -->
 	<div class="container">
-		<div class="row">
-			<div class="col-md-10">
-				<!-- Imagen a la izquierda -->
-				<img src="images/mapa1.png" class="img-fluid" alt="Imagen">
+		<form action="/action_page.php" class="was-validated">
+			<!-- Nombre -->
+			<div class="mb-3 mt-3">
+				<label for="uname" class="form-label">Nombre</label>
+				<input type="text" class="form-control" id="uname" placeholder="Ingrese su nombre" name="uname" required>
+					<div class="valid-feedback">Correcto</div>
+				<div class="invalid-feedback">Por favor complete correctamente el campo. EJ: Ignacio Vegas</div>
 			</div>
-			
-			<div class="col-md-2">
-				<!-- Texto al lado derecho de la imagen -->
-				<h1 class="text-center" style="font-weight: bolder; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"
-				>¡La aplicación para buscar Hospitales Cercanos!</h1>
+			<div class="mb-3">
+				<label for="exampleFormControlInput1" class="form-label">Correo Electrónico</label>
+				<input type="email" class="form-control" id="exampleFormControlInput1" placeholder="nombre@ejemplo.com" required>
+				<div class="valid-feedback">Correcto</div>
+				<div class="invalid-feedback">Por favor complete correctamente el campo. EJ: nombre@correo.cl</div>
 			</div>
-		</div>
-	</div>
-<br><br>
-	<hr class="rounded">
-<br><br>
-	<h1 class="text-center" style="font-weight: bolder; font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">¿Porque instalar nuestra aplicación?</h1>
-<br><br>
-	<div class="container">
-		<div class="mt-7 p-5 bg-success text-white rounded">
-			<h1 class="text-center">Navegación integrada</h1>
-			<p class="text-center">Algunas aplicaciones ofrecen funciones de navegación integradas que guían al usuario hasta el hospital seleccionado, lo que es especialmente útil si estás en una ubicación desconocida o en una situación estresante.</p>
-		</div>
-	</div>
-<br><br>
-	<div class="container">
-		<div class="mt-7 p-5 bg-success text-white rounded">
-			<h1 class="text-center">Localización rápida</h1>
-			<p class="text-center">En situaciones de emergencia o cuando se necesita atención médica de inmediato, contar con una aplicación que localiza hospitales cercanos puede ser vital. Proporciona una forma rápida y sencilla de identificar los centros de atención médica más cercanos, ayudando a obtener ayuda médica en el menor tiempo posible.</p>
-		</div>
-	</div>
+			<div class="mb-3">
+				<label for="exampleFormControlTextarea1" class="form-label">Comentario</label>
+				<textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Ingrese su comentario" required ></textarea>
+				<div class="valid-feedback">Correcto</div>
+				<div class="invalid-feedback">Por favor ingrese un comentario. </div>
+			</div>
+			<button type="" class="btn btn-primary">Enviar</button>
 
+		</form>
+	</div>
 
 	<!-- footer-->
 	<div class="container">
@@ -87,9 +79,11 @@
 	</div>
 
 	<script src="index.js"></script>
+	<script src="detectardispositivo.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 		integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 		crossorigin="anonymous"></script>
 
 </body>
+
 </html>
