Se termina web.

--- a/descarga.html
+++ b/descarga.html
@@ -45,10 +45,12 @@
 				<h5 class="text-center text-white" style="font-weight: bold;">¡Puedes descargarla a continuación!</h5>
 				<br>
 				<div id="boton-movil" class="hidden m-0 row justify-content-center">
-					<button type="button" class="btn btn-success">Descargar</button>
+					<a href="apk/HospitAPP.apk" download="HospitAPP.apk" class="row">
+						<button type="button" class="btn btn-success">Descargar</button>
+					</a>
 				</div>
 				<div id="imagen-desktop" class="hidden" style="position: relative; width: 100% ;">
-					<img src="images/Commons_QR_code.png" alt="Imagen para Desktop" class="" style="display: block;margin: auto">
+					<img src="images/qrcode-generado.png" alt="Imagen para Desktop" class="" style="display: block;margin: auto">
 				</div>
 			</div>
 		</div>
