--- a/descarga.html
+++ b/descarga.html
@@ -45,8 +45,8 @@
 				<h5 class="text-center text-white" style="font-weight: bold;">¡Puedes descargarla a continuación!</h5>
 				<br>
 				<div id="boton-movil" class="hidden m-0 row justify-content-center">
-					<a href="apk/HospitAPP.apk" download="HospitAPP.apk" class="row">
-						<button type="button" class="btn btn-success">Descargar</button>
+					<a href="https://drive.google.com/uc?export=download&id=1XE7RRTqnEcftr_aecwshzKj9d-b8VoyU " blank class="row">
+						<button type="button" class="btn btn-success" href="https://drive.google.com/uc?export=download&id=1XE7RRTqnEcftr_aecwshzKj9d-b8VoyU">Descargar</button>
 					</a>
 				</div>
 				<div id="imagen-desktop" class="hidden" style="position: relative; width: 100% ;">
